updated pages and styles

--- a/projects/main/CustomTexturesRunner.html
+++ b/projects/main/CustomTexturesRunner.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="vendor/bootstrap/css/custom-rules.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/portfolio-item.css" rel="stylesheet">
@@ -73,14 +74,18 @@
 			<li><a href="IMG/Runner/uv maps/wizard hat uv map.png" download>Wizard Hat</a></li>
           </ul>
 		  
-		  <p>The UV map determines the way in which the texture gets mapped to the hat and so for reference I have uploaded the UV maps that I generated when creating the hats. To download a UV map just click on the link for the corresponding hat. </p>
+		  <p>The UV map determines the way in which the texture gets mapped to the hat and so for reference I have uploaded the UV maps that I generated when creating the hats. To download a UV map just click on the link for the corresponding hat that you want to apply a texture for. <br /><br /> 
+		  You don't need to include the UV map in the texture file you insert into the textures folder; it's only use is to provide a reference for how your texture will be mapped onto the hat.</p>
         </div>
 
         <div class="col-md-4">
 		<h3>How to Use</h3>
           <p>How to use:
 In the root directory of the game files, which is in the same folder as the executable there should exist a folder named "Saves", if this folder does not exist you can create it or just run the game and it will be created. Then within that folder add a folder named "Textures" but without the quotes.<br /><br />
-The script is set up to take png images that use the hats name for identification plus the word Retex. Some hats actually use two separate textures, in this case append " Main" or " Brim" to the name of the file. The baseball cap for instance comprises of one texture for the main part that covers the head, while the brim of the hat is a separate texture. These hats are denoted with an "*" after the name.</p>
+The above only applies if you're running the game on Windows, Mac users will have to check their ~/Library folder. <br /><br />
+The script is set up to take png images that use the hats name for identification plus the word Retex. Some hats actually use two separate textures, in this case append " Main" or " Brim" to the name of the file. The baseball cap for instance comprises of one texture for the main part that covers the head, while the brim of the hat is a separate texture. These hats are denoted with an "*" after the name. <br /><br />
+It is also important that the files have the .png extension and not the .jpg extension. </p> 
+
 
 	<h3 class="my-3">Examples</h3>
           <ul>
