--- a/projects/main/IndexJumper.html
+++ b/projects/main/IndexJumper.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="vendor/bootstrap/css/custom-rules.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/portfolio-item.css" rel="stylesheet">
@@ -66,7 +67,7 @@
 
         <div class="col-md-4">
           <h3 class="my-3">Description</h3>
-          <p>Ever wondered how frustrating a game would be if the controls changed at regular intervals? What if rocks started falling from the sky? This project features all this AND MORE! This project is not currently avaiable for download, but it will be free to download once released. <!-- If interested please follow the link to the store page for more information: <a href="#">Store</a> (download for free) --> <br /><br /><br /><br /><br /><br /><br /></p>
+          <p>This project is not currently being developed. <br /><br />Ever wondered how frustrating a game would be if the controls changed at regular intervals? What if rocks started falling from the sky? This project features all this AND MORE! This project is not currently avaiable for download, but it will be free to download once released. <!-- If interested please follow the link to the store page for more information: <a href="#">Store</a> (download for free) --> <br /><br /><br /><br /><br /><br /><br /></p>
           <h3 class="my-3">Details</h3>
           <ul>
             <li>jumping</li>
