--- a/index.html
+++ b/index.html
@@ -270,17 +270,17 @@
                 </a>
               </li> -->
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/michael-zyskind-016b47160/"> <!-- TODO: fill in link -->
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/michael-zyskind-016b47160/" target="_blank"> <!-- TODO: fill in link -->
                   <i class="fab fa-fw fa-linkedin-in"></i>
                 </a>
               </li>
 			  <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/nonamethe2"> <!-- TODO: fill in link -->
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/nonamethe2" target="_blank"> <!-- TODO: fill in link -->
                   <i class="fab fa-fw fa-git"></i>
                 </a>
               </li>
 			  <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://nonamethe2.itch.io/"> <!-- TODO: fill in link -->
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://nonamethe2.itch.io/" target="_blank"> <!-- TODO: fill in link -->
                   <i class="fas fa-shopping-cart"></i>
                 </a>
               </li>
@@ -447,11 +447,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Caravan (Simplified)</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Cavalcade</h2>
               <hr class="star-dark mb-5">
               <!-- <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt=""> -->
-              <p class="mb-5">For an object oriented class I implemented my own version of a card game in Java following various design principles and other object oriented practices. What makes my version unique is that I modified the rules so that, in my own opinion, the game is easier to understand. More information will be posted at a later date. </p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+              <p class="mb-5">For an object oriented class I implemented my own version of a card game in Java following various design principles and other object oriented practices. What makes my version unique is that I modified the rules so that, in my own opinion, the game is easier to understand. My implementation is available to download at the link below. </p>
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="https://nonamethe2.itch.io/cavalcade">
+			  	 <i class=""></i>
+				 Download</a>
+			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
             </div>
