--- a/projects/main/IndexCards.html
+++ b/projects/main/IndexCards.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>User Feedback</title>
+    <title>Caravan (Simplified)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,27 +25,28 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="../../index.html">Home</a>
-        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+		<!-- <a class="navbar-brand" href="UserFeedback.html">Feedback</a> -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>-->
-        <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <!-- <a class="nav-link" href="#">Home
                 <span class="sr-only">(current)</span>
-              </a>
+              </a> -->
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item"> -->
+              <!-- <a class="nav-link" href="UserFeedback.html">Feedback</a> -->
+            <!-- </li> -->
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
-            </li>
+            </li> -->
           </ul>
-        </div> -->
+        </div>
       </div>
     </nav>
 
@@ -53,28 +54,26 @@
     <div class="container">
 
       <!-- Portfolio Item Heading -->
-      <h1 class="my-4">User Feedback
-        <small></small>
+      <h1 class="my-4">Caravan (Simplified)
+        <small>Info</small>
       </h1>
 
       <!-- Portfolio Item Row -->
       <div class="row">
 
         <div class="col-md-8">
-          <!-- <img class="img-fluid" src="IMG/Runner/Gameplay.png" alt=""> -->
-		  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfIVgkfDwD2wLR7NhbzZbSxt3VihAnfooat0JQ97iFdyQhaWg/viewform?embedded=true" width=100% height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+          <img class="img-fluid" src="IMG/Cards/Caravan.png" alt="">
         </div>
 
         <div class="col-md-4">
           <h3 class="my-3">Description</h3>
-          <p>Thank you for taking the time to fill out the form. I will do my best to take any suggestions into consideration, and to also timely address any bugs or other issues with my games. </p>
-          <!-- <h3 class="my-3">Details</h3> -->
-          <!-- <ul>
-            <li>Singleplayer / Splitscreen</li>
-            <li>Player Customization</li>
-            <li>Sidescrolling platformer</li>
-            <li>HATS</li>
-          </ul> -->
+          <p>Caravan originally appeared in the 2010 video game Fallout: New Vegas, developed by Obsidian Entertainment, and features many complex and often arbitrary rules.  The basic premise of the game is to sell your caravans. The caravans being stacks of cards that has a value determined by which cards are added. This comes with various restrictions governing what makes a caravan sellable, but gameplay mostly consists of trying to add or subtract to the value of your caravans to sell your caravans before your opponent manages to do the same. <br /><br />Due to time restraints I decided to modify the rules of the game to make it simpler and easier to play. I modified a majority of the rules, going so far as to remove certain cards from play entirely. I ensured that all my alterations to the rules did not drastically alter gameplay or the end goal so that at its core my version is still the same game. One feature I added to my version is single player gameplay where the user plays against the computer. <br /><br />My implementation of this card game was done entirely in Java. I had originally written this for a class which had as the final project assigned a particularly broad subject which allowed me to build such a large application when the project itself did not need to be of this scale. <br /></p>
+          <h3 class="my-3">Details</h3>
+          <ul>
+            <li>Cards</li>
+            <li>Computer Player</li>
+            <li>Java</li>
+          </ul>
         </div>
 
       </div>
