--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
     </div>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-to-top d-lg-none position-fixed ">
-      <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
+    <div class="scroll-to-top d-lg-none position-fixed mobile-scroll-top">
+      <a class="js-scroll-trigger d-block text-center text-white" href="#page-top">
         <i class="fa fa-chevron-up"></i>
       </a>
     </div>
