updated/added pages and images

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 		<!-- Header -->
 		<header class="masthead bg-primary text-white text-center">
 			<div class="container">
-				<img class="img-fluid mb-5 d-block mx-auto" src="img/Render v2 small - circle.png" alt="" width="22%" />
-				<h1 class="text-uppercase mb-0">Michael Zyskind</h1>
+				 <div class="hover-effect">
+				 	  <img class="img-fluid mb-5 d-block mx-auto" src="img/anaglyph render circle.png" alt="" width="22%" />
+					  <h1 class="text-uppercase mb-0">Michael Zyskind</h1>
+				</div>
 				<hr class="star-light" />
 				<h2 class="font-weight-light mb-0">CS Student - Web Developer - Game Developer</h2>
 			</div>
@@ -126,7 +128,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/ap gov.png" alt="">
+              <img class="img-fluid" src="img/portfolio/ap gov alt.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -136,7 +138,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/practiceAlt.png" alt="">
+              <img class="img-fluid" src="img/portfolio/practice Alt2.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -146,7 +148,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/caravan image.png" alt="">
+              <img class="img-fluid" src="img/portfolio/card game alt.png" alt="">
             </a>
           </div>
 		  </div>
@@ -317,8 +319,11 @@
               <h2 class="text-secondary text-uppercase mb-0">Wild Battle - The Quickest</h2>
               <hr class="star-dark mb-5">
               <!-- <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt=""> -->
-              <p class="mb-5">An arena style FPS game with a vibrant twist. This project is currently a WIP and more info will be provided as it becomes available. </p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+              <p class="mb-5">An arena style FPS game with a vibrant twist. It will feature both online and offline gameplay with a focus on arena style gameplay with one important change. This project is currently a WIP and more info will be provided as it becomes available. </p>
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="projects/Wild Battle/IndexBattle.html">
+                  <!-- <i class="fa fa-close"></i> -->
+                  View</a>
+			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
             </div>
