--- a/projects/UserFeedback.html
+++ b/projects/UserFeedback.html
@@ -38,6 +38,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Wild Runner/IndexRunner.html">Runner</a>
             </li>
+			<li class="nav-item">
+				<a class="nav-link" href="Wild Battle/IndexBattle.html">Battle</a>
+			</li>
             <li class="nav-item">
               <a class="nav-link" href="IndexJumper.html">Jumper</a>
             </li>
