mobile improvements and fixed image names

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Wild_Runner_Alt.png" alt="">
+              <img class="img-fluid" src="img/portfolio/Wild Runner.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -113,7 +113,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Wild_Jumper_Alt.png" alt="">
+              <img class="img-fluid" src="img/portfolio/Wild Jumper.png" alt="">
             </a>
           </div>
 			</div>
@@ -128,7 +128,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/ap gov alt.png" alt="">
+              <img class="img-fluid" src="img/portfolio/ap gov.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -138,7 +138,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/practice Alt2.png" alt="">
+              <img class="img-fluid" src="img/portfolio/practice.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -148,7 +148,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/card game alt.png" alt="">
+              <img class="img-fluid" src="img/portfolio/cavalcade.png" alt="">
             </a>
           </div>
 		  </div>
