Added info for Wild Fighter

--- a/index.html
+++ b/index.html
@@ -80,97 +80,96 @@
 			</div>
 		</section>
 	
-    <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-        <hr class="star-dark mb-5" />
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/Wild Runner.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/Loot_Quest.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/Wild Jumper.png" alt="">
-            </a>
-          </div>
-			</div>
+		<!-- Portfolio Grid Section -->
+		<section class="portfolio" id="portfolio">
+			<div class="container">
+				<h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+				<hr class="star-dark mb-5" />
+				<div class="row">
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/Wild Runner.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/Loot_Quest.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/Wild Fighter.png" alt="">
+						</a>
+					</div>
+				</div>
 		  
-			<!--Second row-->
-			<!-- <div class="container"> -->
-			<div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/ap gov.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/practice.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cavalcade.png" alt="">
-            </a>
-          </div>
-		  </div>
-        <!-- </div> -->
-      </div>
-    </section>
+				<!--Second row-->
+				<!-- <div class="container"> -->
+				<div class="row">
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>	
+							</div>
+							<img class="img-fluid" src="img/portfolio/ap gov.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/practice.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/cavalcade.png" alt="">
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
 
-    <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
-        <hr class="star-light mb-5">
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">My name is Mike and I'm currently an undergraduate studying Computer Science. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity. </p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Ever since I started learning how to program I've always wanted to create a video game. When I was a kid I really enjoyed playing video games and I wanted to make my own. It took years of practice and learning but I finally published my first video game. </p> 
-          </div>
-        </div>
-      </div>
-    </section>
+		<!-- About Section -->
+		<section class="bg-primary text-white mb-0" id="about">
+			<div class="container">
+				<h2 class="text-center text-uppercase text-white">About</h2>
+				<hr class="star-light mb-5">
+				<div class="row">
+					<div class="col-lg-4 ml-auto">
+						<p class="lead">My name is Mike and I'm currently an undergraduate studying Computer Science. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity. </p>
+					</div>
+					<div class="col-lg-4 mr-auto">
+						<p class="lead">Ever since I started learning how to program I've always wanted to create a video game. When I was a kid I really enjoyed playing video games and I wanted to make my own. It took years of practice and learning but I finally published my first video game. </p> 
+					</div>
+				</div>
+			</div>
+		</section>
 
     <!-- Contact Section -->
     <!--<section id="contact">
@@ -296,7 +295,10 @@
 			  <!-- <div class="row"> -->
                 <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="projects/Wild Runner/IndexRunner.html">
                   <!-- <i class="fa fa-close"></i> -->
-                  View</a>
+                  Info</a>
+				<a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="https://nonamethe2.itch.io/wild-runner-the-quickening">
+                  <!-- <i class="fa fa-close"></i> -->
+                  Store</a>
 				<a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                   <i class="fa fa-close"></i>
                   Close</a>
@@ -322,7 +324,7 @@
               <p class="mb-5">An arena style FPS game with a vibrant twist. It will feature both online and offline gameplay with a focus on arena style gameplay with one important change. This project is currently a WIP and more info will be provided as it becomes available. </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="projects/Wild Battle/IndexBattle.html">
                   <!-- <i class="fa fa-close"></i> -->
-                  View</a>
+                  Info</a>
 			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -341,13 +343,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Wild Jumper - <br />the Quick & Nimble</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Wild Fighter</h2>
               <hr class="star-dark mb-5">
               <!-- <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt=""> -->
-              <p class="mb-5">A small project, I created mostly just to make a game that has an entirely arbitrary set of rules that don't make much sense. </p>
-			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="projects/IndexJumper.html">
-                  <!-- <i class="fa fa-close"></i> -->
-                  View</a>
+              <p class="mb-5">Created for a game jam on Itch, this game is a timed bullet hell game. Race against the clock to collect all the stars to win. </p>
+			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="projects/IndexFighter.html">
+                  Info</a>
+			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="https://nonamethe2.itch.io/wild-fighter">Play</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
