--- a/projects/IndexFighter.html
+++ b/projects/IndexFighter.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>User Feedback</title>
+    <title>Wild Fighter</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,26 +25,24 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="../index.html">Home</a>
+		<!-- <a class="navbar-brand" href="UserFeedback.html">Feedback</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-         <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+            <li class="nav-item active">
+              <!-- <a class="nav-link" href="#">Home
                 <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="Wild Runner/IndexRunner.html">Runner</a>
+              </a> -->
             </li>
-			<li class="nav-item">
-				<a class="nav-link" href="Wild Battle/IndexBattle.html">Battle</a>
-			</li>
             <li class="nav-item">
-              <a class="nav-link" href="IndexFighter.html">Fighter</a>
+              <a class="nav-link" href="UserFeedback.html">Feedback</a>
             </li>
             <!-- <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li> -->
           </ul>
@@ -56,28 +54,28 @@
     <div class="container">
 
       <!-- Portfolio Item Heading -->
-      <h1 class="my-4">User Feedback
-        <small></small>
+      <h1 class="my-4">Wild Fighter
+        <small>Info</small>
       </h1>
 
       <!-- Portfolio Item Row -->
       <div class="row">
 
         <div class="col-md-8">
-          <!-- <img class="img-fluid" src="IMG/Runner/Gameplay.png" alt=""> -->
-		  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfIVgkfDwD2wLR7NhbzZbSxt3VihAnfooat0JQ97iFdyQhaWg/viewform?embedded=true" width=100% height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+          <img class="img-fluid" src="IMG/Fighter/preview.png" alt="">
         </div>
 
         <div class="col-md-4">
           <h3 class="my-3">Description</h3>
-          <p>Thank you for taking the time to fill out the form. I will do my best to take any suggestions into consideration, and to also timely address any bugs or other issues with my games. </p>
-          <!-- <h3 class="my-3">Details</h3> -->
-          <!-- <ul>
-            <li>Singleplayer / Splitscreen</li>
-            <li>Player Customization</li>
-            <li>Sidescrolling platformer</li>
-            <li>HATS</li>
-          </ul> -->
+          <p>Made for a game jam on Itch in two weeks, there may be a few minor updates in the future. The theme of the jam was timed bullet hell, so here's that but with some added RNG. Which means the map is randomly generated. Race against the clock in this arcade style game to collect all the shiny stars. <br /><br />Play now on Itch: <a href="https://nonamethe2.itch.io/wild-fighter">Here</a><br /><br /><br /><br /><br /><br /><br /></p>
+          <h3 class="my-3">Details</h3>
+          <ul>
+            <li>Bullet Hell</li>
+            <li>Weird Flying Thing</li>
+            <li>Pixel</li>
+            <li>Timed</li>
+			<li>RNG</li>
+          </ul>
         </div>
 
       </div>
