--- a/projects/Wild Battle/IndexBattle.html
+++ b/projects/Wild Battle/IndexBattle.html
@@ -66,7 +66,7 @@
 
 				<div class="col-md-4">
 					<h3 class="my-3">Description</h3>
-					<p>This is an early preview of the game, and a considerable portion may change in the future. Currently, the game centers around online arena style combat. Offline gameplay will be added in future updates. <br /><br />Currently the game features basic character customization, armor sets, roughly half a dozen unique weapons, and a few maps of my own design. <br /><br />More information will be made available in the future. </p>
+					<p>This is an early preview of the game, and a considerable portion may change in the future. Currently, the game centers around offline arena style combat. Online gameplay may be added in future updates. <br /><br />Currently the game features basic character customization, armor sets, roughly half a dozen unique weapons, and a few maps of my own design. <br /><br />More information will be made available in the future. </p>
 					<h3 class="my-3">Details</h3>
 					<ul>
 						<li>Online Multiplayer</li>
