added gallery, updated favicon

--- a/index.html
+++ b/index.html
@@ -184,7 +184,16 @@
 						<p class="lead">My name is Mike and I'm currently an undergraduate studying Computer Science. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity. </p>
 					</div>
 					<div class="col-lg-4 mr-auto">
-						<p class="lead">Ever since I started learning how to program I've always wanted to create a video game. When I was a kid I really enjoyed playing video games and I wanted to make my own. It took years of practice and learning but I finally published my first video game. </p> 
+						<p class="lead">I've always wanted to create a video game. I enjoyed playing video games when I was younger and I still enjoy it now. Sure it was challenging, it was one of the most challenging things I've ever done. But it was definitely worth it. After almost two years of active development I published my first video game. </p>
+					</div>
+					<div class="col-lg-4">
+						 <p class="lead">I've recently started practicing to draw and if you would like to see some of my work click the button below. Most of my art tends to be a mixture of 3D rendering and drawing. </p>
+						<div class="text-center mt-4 center">
+							<a class="btn btn-xl btn-outline-light" href="Projects/GalleryArt.html">
+								<i class="fas fa-images"></i>
+								&nbsp;&nbsp;View Gallery
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
