--- a/projects/Wild Runner/IndexRunner.html
+++ b/projects/Wild Runner/IndexRunner.html
@@ -6,6 +6,8 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
+		<link rel="icon" href="../../img/favicon.png">
+		
 		<title>Wild Runner - the Quickening</title>
 
 		<!-- Bootstrap core CSS -->
