--- a/projects/GalleryTestProject.html
+++ b/projects/GalleryTestProject.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+	<link rel="icon" href="../img/favicon.png">
+	
     <title>Practice Project Gallery</title>
 
     <!-- Bootstrap core CSS -->
