--- a/projects/IndexCards.html
+++ b/projects/IndexCards.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+	<link rel="icon" href="../img/favicon.png">
+	
     <title>Caravan (Simplified)</title>
 
     <!-- Bootstrap core CSS -->
