--- a/projects/IndexJumper.html
+++ b/projects/IndexJumper.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+	<link rel="icon" href="../img/favicon.png">
+	
     <title>Wild Jumper - the Quick & Nimble</title>
 
     <!-- Bootstrap core CSS -->
