--- a/projects/Wild Battle/Gallery.html
+++ b/projects/Wild Battle/Gallery.html
@@ -6,6 +6,8 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
+		<link rel="icon" href="../../img/favicon.png">
+		
 		<title>Gallery</title>
 
 		<!-- Bootstrap core CSS -->
