--- a/projects/Wild Runner/CustomTexturesRunner.html
+++ b/projects/Wild Runner/CustomTexturesRunner.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+	<link rel="icon" href="../../img/favicon.png">
+	
     <title>Custom Textures</title>
 
     <!-- Bootstrap core CSS -->
