--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<div class="col-lg-4">
 						 <p class="lead">I've recently started practicing to draw and if you would like to see some of my work click the button below. Most of my art tends to be a mixture of 3D rendering and drawing. </p>
 						<div class="text-center mt-4 center">
-							<a class="btn btn-xl btn-outline-light" href="Projects/GalleryArt.html">
+							<a class="btn btn-xl btn-outline-light" href="projects/GalleryArt.html">
 								<i class="fas fa-images"></i>
 								&nbsp;&nbsp;View Gallery
 							</a>
