commit latest changes to heroes submarines kaisers

--- a/index.html
+++ b/index.html
@@ -140,6 +140,52 @@
 				<!--Second row-->
 				<!-- <div class="container"> -->
 				<div class="row">
+					<!-- <div class="col-md-6 col-lg-4"> -->
+						<!-- <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4"> -->
+							<!-- <div class="portfolio-item-caption d-flex position-absolute h-100 w-100"> -->
+								<!-- <div class="portfolio-item-caption-content my-auto w-100 text-center text-white"> -->
+									<!-- <i class="fas fa-search-plus fa-3x"></i> -->
+								<!-- </div>	 -->
+							<!-- </div> -->
+							<!-- <img class="img-fluid" src="img/portfolio/ap gov.png" alt=""> -->
+						<!-- </a> -->
+					<!-- </div> -->
+					<!-- <div class="col-md-6 col-lg-4"> -->
+						<!-- <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5"> -->
+							<!-- <div class="portfolio-item-caption d-flex position-absolute h-100 w-100"> -->
+								<!-- <div class="portfolio-item-caption-content my-auto w-100 text-center text-white"> -->
+									<!-- <i class="fas fa-search-plus fa-3x"></i> -->
+								<!-- </div> -->
+							<!-- </div> -->
+							<!-- <img class="img-fluid" src="img/portfolio/practice.png" alt=""> -->
+						<!-- </a> -->
+					<!-- </div> -->
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/cavalcade.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-6 col-lg-4">
+						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-7">
+							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+									<i class="fas fa-search-plus fa-3x"></i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/portfolio/Heroes-Submarines-Kaisers.png" alt="Heroes, Kaisers, Submarines">
+						</a>
+					</div>
+				</div>
+				
+				<!-- third row -->
+				<h2 class="text-center text-uppercase text-secondary mb-0">Archived</h2>
+				<hr class="star-dark mb-5" />
+				<div class="row">
 					<div class="col-md-6 col-lg-4">
 						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
 							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -160,16 +206,6 @@
 							<img class="img-fluid" src="img/portfolio/practice.png" alt="">
 						</a>
 					</div>
-					<div class="col-md-6 col-lg-4">
-						<a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-							<div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-								<div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-									<i class="fas fa-search-plus fa-3x"></i>
-								</div>
-							</div>
-							<img class="img-fluid" src="img/portfolio/cavalcade.png" alt="">
-						</a>
-					</div>
 				</div>
 			</div>
 		</section>
@@ -184,7 +220,7 @@
 						<p class="lead">My name is Mike and I'm currently an undergraduate studying Computer Science. I have been programming for almost a decade now and I never backed down from a challenge. Whenever I faced a challenging problem I approached it as a learning opportunity. </p>
 					</div>
 					<div class="col-lg-4 mr-auto">
-						<p class="lead">I've always wanted to create a video game. I enjoyed playing video games when I was younger and I still enjoy it now. Sure it was challenging, it was one of the most challenging things I've ever done. But it was definitely worth it. After almost two years of active development I published my first video game. </p>
+						<p class="lead">I've always wanted to create a video game. I grew up playing lots of video games, and as I learned programming I thought it would be a fun learning experience. It took awhile but I was able to eventually publish my first video game, Wild Runner, which I'm very proud of. </p>
 					</div>
 					<div class="col-lg-4">
 						 <p class="lead">I've recently started practicing to draw and if you would like to see some of my work click the button below. Most of my art tends to be a mixture of 3D rendering and drawing. </p>
@@ -454,6 +490,34 @@
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" target="_blank" href="https://nonamethe2.itch.io/cavalcade">
 			  	 <i class=""></i>
 				 Download</a>
+			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+	
+	<!-- Portfolio Modal 7 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-7">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">Heroes, Kaisers, Submarines</h2>
+              <hr class="star-dark mb-5">
+              <!-- <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt=""> -->
+              <p class="mb-5">A complex card game intended to teach basic cooking by helping players understand the relations between the various ingredients. <br /><br />The game itself isn't complete and most likely never will be completed. <br /><br />Artwork by Joe. </p>
+			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" href="https://nonamethe2.github.io/GAM224SandwichBuilder/">
+				Info
+			  </a>
+              <!-- <a class="btn btn-primary btn-lg rounded-pill portfolio-modal" target="_blank" href="https://nonamethe2.itch.io/cavalcade">
+			  	 <i class=""></i>
+				 Download</a> -->
 			  <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
